[project]
name = "asteroids"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame==2.6.1",
]

[tool.pyright]
pythonVersion = "3.13"
pythonPlatform = "Linux"
include = ["."]
exclude = ["**/__pycache__", ".venv", "**/node_modules"]
stubPath = ""
useLibraryCodeForTypes = true
